# back-transport

./: Cargo.toml  rust-toolchain.toml  salida.txt
app/app_config/: Cargo.toml
app/app_config/config/: config.json  main.py
app/app_config/src/: main.rs  public.pem
app/app_config/src/config/: env_config.rs  main.py
app/app_config/src/modules/: mod.rs
app/app_config/src/modules/app_charge/domain/: mod.rs
app/app_config/src/modules/app_charge/domain/data/: charge_dto.rs  mod.rs
app/app_config/src/modules/app_charge/domain/models/: features_for_proyect.rs  mod.rs  proyect_desnormalized.rs
app/app_config/src/modules/app_charge/domain/response/: categorical_to_categorical_response.rs  continous_categorical_response.rs  file_charge_response.rs  get_columns_response.rs  mod.rs  scatter_plot_response.rs
app/app_config/src/modules/app_charge/domain/use_case/: charge_categorical_use_case.rs  charge_file_use_case.rs  continous_categorical_use_case.rs  get_all_data_use_case.rs  get_category_plot_use_case.rs  get_columns_use_case.rs  get_scat_use_case.rs  mod.rs
app/app_config/src/modules/app_charge/infrastructure/use_case/: impl_charge_categorical_use_case.rs  impl_charge_continous_to_categorical_use_case.rs  impl_charge_field_scatt_use_case.rs  impl_charge_use_case.rs  impl_continous_categorical_use_case.rs  impl_get_all_data_use_case.rs  impl_get_categorical_plot_use_case.rs  impl_get_columns_use_case.rs  impl_get_scat_use_case.rs  mod.rs
app/app_config/src/modules/app_charge/presentation/: app_charge_controller.rs  app_charge_scope.rs  mod.rs
app/app_config/src/modules/country/domain/data/: create_country_dto.rs  create_country_response.rs  create_country_timezone_dto.rs  mod.rs  natural_earth_geometry_dto.rs  update_country_dto.rs
app/app_config/src/modules/country/domain/models/: country_cca2.rs  country_id.rs  country_name.rs  country_only_name.rs  country_timezone_to_insert.rs  country_to_update.rs  mod.rs  timezone_id.rs
app/app_config/src/modules/country/domain/use_case/: create_country_use_case.rs  get_country_use_case.rs  get_one_country_use_case.rs  mod.rs  update_country_use_case.rs
app/app_config/src/modules/country/infrastructure/use_case/: impl_create_country_use_case.rs  impl_get_country_use_case.rs  impl_get_one_country_use_case.rs  impl_update_country_use_case.rs  mod.rs
app/app_config/src/modules/country/presentation/: country_controller.rs  country_scope.rs  mod.rs
app/app_config/src/modules/product_version/domain/: mod.rs
app/app_config/src/modules/proyect/domain/: mod.rs
app/app_config/src/modules/proyect/domain/data/: create_proyect_dto.rs  mod.rs  update_proyect_dto.rs
app/app_config/src/modules/proyect/domain/use_case/: create_proyect_use_case.rs  delete_proyect_use_case.rs  get_one_proyect_use_case.rs  get_proyect_use_case.rs  mod.rs  update_proyect_use_case.rs
app/app_config/src/modules/proyect/infrastructure/use_case/: impl_create_proyect_use_case.rs  impl_delete_proyect_use_case.rs  impl_get_one_proyect_use_case.rs  impl_get_proyect_use_case.rs  impl_update_proyect_use_case.rs  mod.rs
app/app_config/src/modules/proyect/presentation/: mod.rs  proyect_controller.rs  proyect_scope.rs
app/app_config/src/modules/subscription_product/domain/: mod.rs
app/app_config/src/modules/subscription_product/domain/models/: mod.rs  subscription_product_id.rs
app/app_config/src/modules/subscription_product/domain/use_case/: get_subscription_product_use_case.rs  (+5 more)
app/app_config/src/modules/subscription_product/presentation/: mod.rs  subscription_product_controller.rs  subscription_product_scope.rs
app/app_config/src/modules/template/domain/: mod.rs
app/app_config/src/modules/template/presentation/: mod.rs  template_controller.rs  template_scope.rs
app/app_config/src/modules/template_type/: mod.rs
app/app_config/src/modules/template_type/infrastructure/: impl_create_template_type_use_case.rs  impl_delete_template_type_use_case.rs  impl_get_one_template_type_use_case.rs  impl_get_template_type_use_case.rs  impl_update_request_use_case.rs  mod.rs
app/app_config/src/modules/template_type/presentation/: mod.rs  template_type_controller.rs  template_type_scope.rs
app/app_config/src/modules/timezone/domain/: mod.rs
app/app_config/src/modules/timezone/presentation/: mod.rs  timezone_controller.rs  timezone_scope.rs
app/app_config/src/utils/: mod.rs
app/app_config/src/utils/charge_models/: mod.rs  void_struct.rs
app/app_config/src/utils/errors/: csv_error.rs  mod.rs
app/auth/: Cargo.toml
app/auth/config/: config.json
app/auth/src/: main.rs  private_key.pem  private_key_rf.pem
app/auth/src/config/: env_config.rs
app/auth/src/modules/: mod.rs
app/auth/src/modules/auth/presentation/: auth_controller.rs  auth_scope.rs  mod.rs
app/auth/src/modules/user_management/domain/: mod.rs
app/auth/src/modules/user_management/presentation/: mod.rs  user_management_controller.rs  user_management_scope.rs
app/auth/src/utils/domain/middleware/: mod.rs  renew_tk_middleware.rs
app/auth/src/utils/infrastructure/functions/: mod.rs
app/authorization/: Cargo.toml
app/authorization/config/: config.json
app/authorization/src/: main.rs
app/authorization/src/config/: env_config.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/helpers/: mod.rs
common/src/helpers/env/: env.rs
common/src/helpers/password/: encryptation_error.rs  password_functions.rs
common/src/helpers/serialize_deseralize/: mod.rs  optimized.rs
common/src/middlewares/: verify_token.rs
common/src/public/functions/: async_map_err.rs  auth_surreal.rs  mod.rs  random_code.rs
common/src/public/models/: default_claims.rs  mod.rs
common/src/utils/: mod.rs
common/src/utils/macros/: create_empty_scope.rs  get_repo.rs  mod.rs
common/src/utils/ntex_private/extractors/: errors.rs  json.rs  mod.rs  multipart_extractor.rs  query_advanced.rs
common/src/utils/traits/: hashmap.rs
crates/tentant_core/: Cargo.toml
crates/tentant_core/src/: config_resolver.rs  crypto.rs  database_config.rs  events.rs  lib.rs  middleware.rs  pool_manager.rs  types.rs
(+92 files in other folders)
