[workspace]
members = [
    "app/auth",
    "common", "crates/tentant_core",
]

resolver = "3"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

ntex = { version = "2.17.0", features = ["tokio"] }

reqwest = { version = "0.13.0", features = ["blocking", "json"] }
validator = { version = "0.20.0", features = ["derive"] }
derive_more = "2.1.0"
futures = "0.3.30"
jsonwebtoken = "10.2.0"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.9.2", features = ["std"] }
async-trait = "0.1.88"
config = "0.15.11"
tenant-core = { path = "crates/tenant-core" }
thiserror = "2.0.17"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
# ⚡ Mejor rendimiento en producción
opt-level = "z"         # Optimizaciones para tamaño (ó "3" para máximo rendimiento)
lto = true              # Link Time Optimization (reduce binario, mejora CPU)
codegen-units = 1       # Más lento de compilar pero mejor rendimiento final
panic = "abort"         # Evita generar código de unwind para panics
strip = true            # Remueve símbolos de depuración
