[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = { version = "0.20.0", features = ["derive"] }
derive_more = "0.99.17"
futures = "0.3.30"
mime = "0.3.17"
ntex = { version = "2.12.4", features = ["tokio"] }
ntex-files = "2.0.0"
ntex-multipart = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
fxhash = "0.2.1"
rust-argon2 = "2.1.0"
rand = { version = "0.9.1", default-features = false, features = ["os_rng"] }
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
config = "0.15.11"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
chrono-tz = "0.10.0"
serde_urlencoded = "0.7.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
log = "0.4.14"
base64 = "0.22.1"
once_cell = "1.21.3"
memchr = "2.7.4"
simd-json = { version = "0.15.1", features = ["serde_impl"] }
bytes = "1.10.0"
surrealdb = "2.3.3"
deadpool = "0.12.2"