[package]
name = "common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mime = "0.3.17"
ntex-files = "2.0.0"
ntex-multipart = "2.0.0"
async-trait = "0.1"
fxhash = "0.2.1"
rust-argon2 = "3.0.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
chrono-tz = "0.10.0"
serde_urlencoded = "0.7.0"
log = "0.4.14"
once_cell = "1.21.3"
memchr = "2.7.4"
simd-json = { version = "0.17.0", features = ["serde_impl"] }
bytes = "1.10.0"
deadpool = "0.12.2"

chrono = {workspace= true}
serde =  {workspace= true}
serde_json = {workspace= true}
rand = {workspace= true}
ntex={workspace= true}
derive_more = {workspace= true}
futures = {workspace= true}
validator = {workspace= true}
tokio = {workspace= true}
reqwest = {workspace= true}
config = {workspace= true}
