[package]
name = "app_config"
version = "0.1.0"
edition = "2024"

[build]
name = "app_config"
crate_type = ["cdylib"]

[dependencies]
ntex = { version = "2.12.4", features = ["tokio"] }
ntex-cors = "2.0.0"
num_cpus = "1.16.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
common = { path = "../../common" }
ac_struct_back = { git = "https://github.com/jasrod12ucsm/abt_struct.git", package = "ac_struct_back",tag = "v0.1.026" }
surrealdb = { version = "2.3.8", features = ["allocator", "kv-mem", "kv-surrealkv", "kv-rocksdb", "protocol-http", "protocol-ws", "rustls"] }
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
rand = "0.9.2"
rayon = "1.11.0"

minmaxlttb = "0.1.3"
async-trait = "0.1.88"
chrono = "0.4.41"
smallvec = "1.15.0"
ahash = {version = "0.8.12",features = ["serde"] }
env_logger = "0.11.8"
logger = "0.4.0"
deadpool = {version = "0.12.2",features = ["rt_tokio_1"]}
aho-corasick = "1.1.3" 
validator = { version = "0.20.0", features = ["derive"] }
itertools = "0.14.0"
polars = {version = "0.50.0", features = ["lazy","strings","regex","timezones","round_series"]}
rust_decimal = "1.37.1"
lazy_static = "1.5.0"
pyo3= {version = "0.26.0", features = ["auto-initialize"]}
