[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11.16", features = [
    "tokio1",
    "smtp-transport",
    "serde",
    "tokio1-native-tls",
] }
ntex = { version = "2.12.4", features = ["tokio"] }
ntex-cors = "3.0.0"
num_cpus = "1.16.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "10.2.0"
common = { path = "../../common" }

tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.88"
rand = { version = "0.9.2", features = ["std"] }
chrono = "0.4.41"
validator = "0.20.0"
checkmail = "0.1.1"
smallvec = "1.15.0"
env_logger = "0.11.8"
logger = "0.4.0"
deadpool = {version = "0.12.2",features = ["rt_tokio_1"]}
