[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11.16", features = [
    "tokio1",
    "smtp-transport",
    "serde",
    "tokio1-native-tls",
] }
ntex-cors = "3.0.0"
num_cpus = "1.16.0"
once_cell = "1.21.3"
jsonwebtoken = "10.2.0"
common = { path = "../../common" }
serde_json = {workspace= true} 
serde = {workspace= true} 
ntex = {workspace= true} 
tokio = {workspace= true} 


checkmail = "0.1.1"
smallvec = "1.15.0"
env_logger = "0.11.8"
logger = "0.4.0"
deadpool = {version = "0.12.2",features = ["rt_tokio_1"]}


query_spec = { git = "ssh://git@github.com/jasrod12ucsm/query_builder.git", tag = "v1.04" }


