[package]
name = "authorization"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "2.12.4", features = ["tokio"] }
ntex-cors = "2.0.0"
num_cpus = "1.16.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
common = { path = "../../common" }
ac_struct_back = { git = "https://github.com/jasrod12ucsm/ac_struct_back.git", package = "ac_struct_back",tag="v0.1.13"}
surrealdb = { version = "2.3.3", features = ["allocator", "kv-mem", "kv-surrealkv", "kv-rocksdb", "protocol-http", "protocol-ws", "rustls"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.88"
chrono = "0.4.41"
smallvec = "1.15.0"
env_logger = "0.11.8"
logger = "0.4.0"
deadpool = {version = "0.12.2",features = ["rt_tokio_1"]}
